refactor: keep photo metadata only during upload